Update 2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -1,1 +1,11 @@
-# read01-astro_ph_PE-EnCh
+URL: https://arxiv.org/abs/2509.08737
+
+# abstract
+
+## [Q1] what is brown dwarf desert?
+
+[A1] the notable shortage=lack=paucity=dearth=scarcity of brown dwarf companions at orbital separations between 0.1 and 5 AU.
+
+## [Q2] what is KS test?
+
+[A2] Kolmogorov-Smirnov statistical test, compare two Cumulative Distribution Functions (CDFs) (sample A VS sample B, OR sampled VS theoretical) with KS statistic=统计量 (D=max{$F1(x)-F2(x)$}) to JUDGE whether they are from identitical distributions.
