Update 2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -8,4 +8,4 @@ URL: https://arxiv.org/abs/2509.08737
 
 ## [Q2] what is KS test?
 
-[A2] Kolmogorov-Smirnov statistical test, compare two Cumulative Distribution Functions (CDFs) (sample A VS sample B, OR sampled VS theoretical) with KS statistic=统计量 (D=max{$F1(x)-F2(x)$}) to JUDGE whether they are from identitical distributions.
+[A2] Kolmogorov-Smirnov (KS) statistical test, compares two Cumulative Distribution Functions (CDFs) (sample A VS sample B, OR sampled VS theoretical) with KS statistic=统计量 (D=max{F1(x)-F2(x)}) to **judge** whether they are from identitical distributions.
