Update 2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -1,11 +1,54 @@
-URL: https://arxiv.org/abs/2509.08737
+URL: [arXiv:2509.08737 (B. Karamiqucham)](https://arxiv.org/abs/2509.08737)
 
 # abstract
 
 ## [Q1] what is brown dwarf desert?
 
-[A1] the notable shortage=lack=paucity=dearth=scarcity of brown dwarf companions at orbital separations between 0.1 and 5 AU.
+the notable shortage=lack=paucity=dearth=scarcity of brown dwarf companions at orbital separations between 0.1 and 5 AU.
 
 ## [Q2] what is KS test?
 
-[A2] Kolmogorov-Smirnov (KS) statistical test, compares two Cumulative Distribution Functions (CDFs) (sample A VS sample B, OR sampled VS theoretical) with KS statistic=统计量 (D=max{F1(x)-F2(x)}) to **judge** whether they are from identitical distributions.
+Kolmogorov-Smirnov (KS) statistical test,
+
+compares two Cumulative Distribution Functions (CDFs) (sample A VS sample B, OR sampled VS theoretical) with KS statistic=统计量 
+
+$$D = \mathrm{max}\\{F_1(x)-F_2(x)\\}\ ,$$
+
+**TO JUDGE** whether they are from identitical distributions.
+
+>````
+># python
+>from scipy.stats import ks_1samp, ks_2samp, kstest
+>
+>kstest(data1, data2, N=20, alternative='two-sided', method='auto')  # return (D, p-value)
+>
+># 1 sample test
+>ks_1samp(data, cdf='norm')  # return (D, p-value)
+>
+># 2-samples test
+>ks_2samp(data1, data2)  # return (D, p-value)
+>````
+>
+>if returned p-value >= 0.05, they have **NO** significant statistical differences,
+>
+>in other words, we can think they come from the same distribution.
+
+## [Q3] what mechanisms does this paper review, and what about their evaluation results?
+
+(A) disk migration with stellar infall (27 parameters, D = 0.100, p-value = 0.216),
+
+(B) core accretion with mass-dependent survival probability (9 parameters, D = 0.173, p-value = 0.005), 
+
+(C) formation bias through dynamical migration (3 parameters, D = 0.417, p-value = $3.5×10^{-17}$ ).
+
+>use grid-search analysis (parameter-space scanning).
+>
+>all three mechanisms have their own model and parameter-dependence.
+
+## [Q4] what conclusions does this paper offer?
+
+it suggests that brown dwarfs primarily form at wide separations and undergo limited inward migration,
+
+challenging scenarios that invoke in-situ formation through core accretion processes at close orbital separations.
+
+>先宽距形成再迁移，而非直接窄距原位形成。
