Update and rename 2509.08737-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md to 2509.08737-[Lv1]-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/statistical/2509.08737-[Lv1]-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/statistical/2509.08737-[Lv1]-fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -1,5 +1,9 @@
 URL: [arXiv:2509.08737 (B. Karamiqucham)](https://arxiv.org/abs/2509.08737)
 
+# CORE
+
+[Lv1] 三种褐矮星伴星形成模型可以了解下
+
 # abstract
 
 ## [Q1] what is brown dwarf desert?
