--- a/2509.08393.md
+++ b/2509.08393.md
@@ -2,8 +2,32 @@
 
 ## [1] Context
 
-Description of the large-scale field topology of protoplanetary disks (PPD), needs the understanding of the transport输运 of the large-scale field inside the disk.
+description of large-scale field topology of protoplanetary disks (PPD),
 
-## [2] Aim
+needs to understand of transport输运 of $B_\mathrm{D, LS}$ inside disk.
 
-explore the dependencies that stellar magnetic fields pose on the large-scale field, in the innermost disk region (=< 0.1 AU).
+## [2] Aims
+
+explore dependencies that stellar magnetic fields $B_\mathrm{S}$ pose on large-scale field $B_\mathrm{D, LS}$ , in **innermost** disk region (=< 0.1 AU).
+
+## [3] Results
+
+large-scale field topology in **stationary** models shows a distinct dependence on specific parameters:
+
+(1) innermost disk region is strongly affected by $P_\mathrm{S,rot}$ and $B_\mathrm{S}$ .
+
+(2) outer disk region is affected by $L_\mathrm{Xray}$ and fossil field.
+
+(3) varying mass flow (through disk) affects $B_\mathrm{D, LS}$ throughout its radial extent.
+
+## [4] Conclusions
+
+the topology of $B_\mathrm{D, LS}$ will affect efficiency of MHD outflows,
+
+such outflows might originate from very inner disk region, dead zone, or outer disk.
+
+## [5] Expectations
+
+will use these models as starting point for conducting long-term evolution simulations of disk and $B_\mathrm{D, LS}$ on scales of ∼ $10^6$ yr,
+
+to investigate combined evolution of disk, magnetic field topology, and resulting MHD outflows.
