Update 2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/statistical/2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/statistical/2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -1,6 +1,8 @@
 URL: [arXiv:2509.08737 (B. Karamiqucham)](https://arxiv.org/abs/2509.08737)
 
-\<\< Constraining Brown Dwarf Desert Formation Mechanisms Through Statistical Comparison of Observed and Simulated Orbital Distributions \>\>
+\<\< Constraining Brown Dwarf Desert Formation Mechanisms Through
+
+Statistical Comparison of Observed and Simulated Orbital Distributions \>\>
 
 B. Karamiqucham: College of Charleston, USA.
 
