Update 2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md

--- a/statistical/2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
+++ b/statistical/2509.08737 [Lv1 x] fitting 3 brown dwarf desert formation mechanisms with obser- and simul-data with KS test.md
@@ -12,11 +12,11 @@ B. Karamiqucham: College of Charleston, USA.
 
 # ABSTRACT
 
-## [Q1] what is brown dwarf desert?
+### [Q1] what is brown dwarf desert?
 
 the notable shortage=lack=paucity=dearth=scarcity of brown dwarf companions at orbital separations between 0.1 and 5 AU.
 
-## [Q2] what is KS test?
+### [Q2] what is KS test?
 
 Kolmogorov-Smirnov (KS) statistical test,
 
@@ -43,7 +43,7 @@ $$D = \mathrm{max}\\{F_1(x)-F_2(x)\\}\ ,$$
 >
 >in other words, we can think they come from the same distribution.
 
-## [Q3] what mechanisms does this paper review, and what about their evaluation results?
+### [Q3] what mechanisms does this paper review, and what about their evaluation results?
 
 (A) disk migration with stellar infall (27 parameters, D = 0.100, p-value = 0.216),
 
@@ -55,7 +55,7 @@ $$D = \mathrm{max}\\{F_1(x)-F_2(x)\\}\ ,$$
 >
 >all three mechanisms have their own model and parameter-dependence.
 
-## [Q4] what conclusions does this paper offer?
+### [Q4] what conclusions does this paper offer?
 
 it suggests that brown dwarfs primarily form at wide separations and undergo limited inward migration,
 
