--- a/theoretical/theoretical/2509.08393 [Lv3 x] HD flow modelling with temperature and mag. field structure.md
+++ b/theoretical/theoretical/2509.08393 [Lv3 x] HD flow modelling with temperature and mag. field structure.md
@@ -10,15 +10,15 @@ D. Steiner, L. Gehrig, M. Güdel: University of Vienna, Austria.
 
 # ABSTRACT
 
-## [1] Context
+### [1] Context
 
 description of large-scale field topology of protoplanetary disks (PPD), needs understand transport输运 of $B_\mathrm{D, LS}$ inside disk.
 
-## [2] Aims
+### [2] Aims
 
 explore dependencies how large-scale field $B_\mathrm{D, LS}$ depend on stellar magnetic fields $B_\mathrm{S}$ , in **innermost** disk region (=< 0.1 AU).
 
-## [3] Results
+### [3] Results
 
 large-scale field topology in **stationary** models shows a distinct dependence on specific parameters:
 
@@ -30,11 +30,11 @@ large-scale field topology in **stationary** models shows a distinct dependence 
 
 >最内盘的 $B_\mathrm{D, LS}$ 被恒星(自转和磁场)强烈影响，外部盘的 $B_\mathrm{D, LS}$ 受恒星X射线辐射影响，质量输运流也影响 $B_\mathrm{D, LS}$ 的径向结构。
 
-## [4] Conclusions
+### [4] Conclusions
 
 topology of $B_\mathrm{D, LS}$ will affect efficiency of MHD outflows, which might originate from very inner disk region, dead zone, or outer disk.
 
-## [5] Expectations
+### [5] Expectations
 
 use these models as starting point for conducting long-term evolution simulations of disk and $B_\mathrm{D, LS}$ on scales of ∼ $10^6$ yr,
 
