Update 2509.09858 [Lv3 x] stability analysis for tidal synchronization of P-M system.md

--- a/theoretical/2509.09858 [Lv3 x] stability analysis for tidal synchronization of P-M system.md
+++ b/theoretical/2509.09858 [Lv3 x] stability analysis for tidal synchronization of P-M system.md
@@ -48,7 +48,7 @@ sec.8 【结论】
 
 忽略M的AM和P+M轨道的小i和小e, 得到确保P tidal同步的简单物理约束(oP-aP关系).
 
-满足约束, 在原则上会实现同步, 但并不总会实现, 因为有不稳定平衡点(直线与同步条件--双曲线hyperbola的两个交点intersection).
+满足约束, 在原则上会实现同步, 但并不总会实现, 因为有不稳定平衡点(直线--KPL第三定律 与 同步条件--双曲线hyperbola 的两个交点intersection).
 
 > 为什么低能态rot. equilib.是内禀不稳的, 而高能态rot. equilib.是永久稳定的???
 
